2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/TargetControlHardware.cpp
	(TargetControlHardware::isExternalMem)
	(TargetControlHardware::readFrom): Cast mEmem.ephy_base to
	uint32_t.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::hideBreakpoints)
	(GdbServer::unhideBreakpoints): Change return type to void.
	* src/GdbServer.h (GdbServer::hideBreakpoints)
	(GdbServer::unhideBreakpoints): Ditto.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* e-src/GdbServer.cpp (GdbServer::rspAttach)
	(GdbServer::rspSetThread): Remove unused locals.

2016-10-27  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.h (GdbServer::vContTidAction::matches): Add
	missing return path.

2016-06-23  Ola Jeppsson  <ola@adapteva.com>

	* src/GdbServer.cpp (GdbServer::findStopReason): Validate PC before
	trying to read its memory contents.
	* src/TargetControl.cpp (TargetControl::isValidAddr): Implemented.
	* src/TargetControl.h (TargetControl::isExternalMem): Add virtual
	function.
	(TargetControl::isCoreMem): Add virtual function.
	(TargetControl::isValidAddr): Add virtual function.
	* src/TargetControlHardware.cpp
	(TargetControlHardware::isExternalMem): Implemented.
	(TargetControlHardware::isCoreMem): Implemented.
	* src/TargetControlHardware.h:
	(TargetControlHardware::isExternalMem): Add virtual function.
	(TargetControlHardware::isCoreMem): Add virtual function.
	* src/Thread.cpp (Thread::isValidPc): Implemented.
	* src/Thread.h (Thread::isValidPc): Add function prototype.

2016-06-23  Ola Jeppsson  <ola@adapteva.com>

	* Makemodule.am (e_server_e_server_LDADD): Remove -ldl.
	* src/TargetControlHardware.cpp (TargetControlHardware::addrToCoords):
	New helper function.
	(TargetControlHardware::initHwPlatform): Don't dlopen e-hal library.
	Don't dynamically resolve e-hal (e_srv) functions.
	(TargetControlHardware::initPlatform): Switch to e-hal API from
	deprecated e_srv API.
	(TargetControlHardware::closePlatform): Likewise.